Docs: Tidy readme a bit

--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 
 #+HTML: <a href=https://alphapapa.github.io/dont-tread-on-emacs/><img src="images/dont-tread-on-emacs-150.png" align="right"></a>
 
-An Org HTML export theme based on [[https://github.com/fniessen/org-html-themes][Bigblow]] and [[https://ethanschoonover.com/solarized/][Solarized]] [[https://github.com/bbatsov/solarized-emacs][Dark]].  Primarily the colors are changed, but there are also minor improvements to the layout and JavaScript.
+An Org HTML export theme based on [[https://github.com/fniessen/org-html-themes][Bigblow]] and [[https://ethanschoonover.com/solarized/][Solarized]] [[https://github.com/bbatsov/solarized-emacs][Dark]].  Primarily the colors are changed, but there are also minor changes to the layout, styles, and JavaScript.
 
 * Screenshots
 :PROPERTIES:
@@ -26,7 +26,7 @@ An Org HTML export theme based on [[https://github.com/fniessen/org-html-themes]
 :TOC:      0
 :END:
 
-Copy the =export= directory to the directory where your Org file is, and add this setting line to the Org file:
+Copy the =export= directory to the directory where your Org file is, then add this setting to the Org file:
 
 #+BEGIN_SRC org
   #+SETUPFILE: export/setup/theme-darksun-local.setup
